--- a/app/_config/elemental.yml
+++ b/app/_config/elemental.yml
@@ -7,6 +7,7 @@ Page:
     - Skeletor\Elemental\SingleVideoElement
     - Skeletor\Elemental\EmbeddedCodeElement
     - Skeletor\Elemental\ShopifyProductElement
+    - Skeletor\Elemental\ShopifyCollectionElement
   allowed_elements_sidebar:
     - DNADesign\Elemental\Models\ElementContent
 
